-Fixed icons on calendar not showing

--- a/blog/static/blog/styles.css
+++ b/blog/static/blog/styles.css
@@ -65,7 +65,7 @@
 
 html *
 {
-   font-family: Sans-Serif !important;
+   font-family: Sans-Serif;
 }
 
 *,
@@ -4529,6 +4529,7 @@ textarea.form-control-lg {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 .card > hr {
   margin-right: 0;
@@ -6000,6 +6001,7 @@ textarea.form-control-lg {
 
 .carousel {
   position: relative;
+  
 }
 
 .carousel.pointer-event {
